[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/MainLevel2/SnowPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MainLevel2/PlatformWhite.gd" type="Script" id=2]
[ext_resource path="res://scenes/MainLevel2/GreenShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/BG.png" type="Texture" id=4]
[ext_resource path="res://scenes/particles.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MainLevel2/SnowTiles1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MainLevel2/SnowTiles2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/MainLevel2/SnowTiles3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/MainLevel2/Spike.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/MainLevel2/ObjectiveArea.gd" type="Script" id=10]
[ext_resource path="res://assets/explosion/00.png" type="Texture" id=11]
[ext_resource path="res://assets/GeometryDash_SpriteSheet.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 124.875, 39.5 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color = Color( 1, 0.792157, 0, 1 )
hue_variation = 0.87
hue_variation_random = 1.0

[sub_resource type="Theme" id=3]

[node name="MainLevel2" type="Node"]

[node name="PlatformWhite" type="Node2D" parent="."]
position = Vector2( 36, 542 )
script = ExtResource( 2 )

[node name="SnowPlatform" parent="PlatformWhite" instance=ExtResource( 1 )]

[node name="SnowPlatform3" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 140, 0 )

[node name="SnowPlatform4" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 650, 0 )

[node name="SnowPlatform5" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 650, 70 )

[node name="SnowPlatform6" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 650, 140 )

[node name="SnowPlatform7" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 650, 210 )

[node name="SnowPlatform8" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 650, 280 )

[node name="SnowPlatform2" parent="PlatformWhite" instance=ExtResource( 1 )]
position = Vector2( 70, 0 )

[node name="GreenShip" parent="." instance=ExtResource( 3 )]
position = Vector2( 73, 450 )

[node name="Particles2D" parent="GreenShip" instance=ExtResource( 5 )]
position = Vector2( 0, 38 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="Bg" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.611765, 0.611765, 0.611765, 1 )
position = Vector2( 337, 445 )
scale = Vector2( 0.671611, 0.68715 )
texture = ExtResource( 4 )
offset = Vector2( 399.859, -202.012 )

[node name="Tiles" type="Node2D" parent="."]
position = Vector2( 304, 550 )

[node name="SnowTiles3" parent="Tiles" instance=ExtResource( 6 )]

[node name="SnowTiles2" parent="Tiles" instance=ExtResource( 7 )]
position = Vector2( 128, 0 )

[node name="SnowTiles1" parent="Tiles" instance=ExtResource( 8 )]
position = Vector2( 256, 0 )

[node name="Spiker" type="Node" parent="."]

[node name="StaticBody2D" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 315, 450 )

[node name="StaticBody2D2" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 268, 453 )

[node name="StaticBody2D3" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 409, 450 )

[node name="StaticBody2D4" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 362, 453 )

[node name="StaticBody2D5" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 502, 450 )

[node name="StaticBody2D6" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 455, 453 )

[node name="StaticBody2D7" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 596, 450 )

[node name="StaticBody2D8" parent="Spiker" instance=ExtResource( 9 )]
position = Vector2( 549, 453 )

[node name="ObjectiveArea" type="Area2D" parent="."]
position = Vector2( 746, 506 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 126.125, 40 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ObjectiveArea"]
scale = Vector2( 1.4, 1 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 362.863, 14, 181, 78 )

[node name="Particles2D" type="Particles2D" parent="ObjectiveArea"]
position = Vector2( 127, 20 )
z_index = -2
amount = 20
process_material = SubResource( 2 )
texture = ExtResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 48.0
theme = SubResource( 3 )
text = "High Gravity, Try Pressing Z, X, or C"

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
